tests/paczka1/fuzzy1/58946700.err
Error in line 4: 16JFj S664 36,3
Error in line 1: lo44 S107 37,4
Error in line 11: 16JFj A266 58,6
Error in line 13: lo44 S664 86,8
Error in line 24: lo44 S194 30,4
Error in line 33: 16JFj S107 4,6
